5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1621_2934.log
== TEST (2019-04-01 18:21:27) 
-- CODE:
from math

x =int(input("valor inicial: "))
y =int(input("a taxa de redemento r: "))
total = 
-- ERROR:
File "XXXX", line 1
    from math
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:21:34) 
-- CODE:
from math

x =int(input("valor inicial: "))
y =int(input("a taxa de redemento r: "))

-- ERROR:
File "XXXX", line 1
    from math
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:23:02) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
y =int(input("a taxa de redemento r: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:27:59) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
y =int(input("a taxa de redemento r: "))
total =(Q0 + Qf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:38) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
y =int(input("a taxa de redemento r: "))
total =
-- ERROR:
File "XXXX", line 5
    total =
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:47) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
y =int(input("a taxa de redemento r: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:28) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
y =int(input("a taxa de redemento r: "))
y = lnQf - lnQ0/r
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:33:15) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:34:47) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =(valor final - valor inicial )

-- ERROR:
File "XXXX", line 5
    total =(valor final - valor inicial )
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:35:44) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:38) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =(10)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:12) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =(10)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:36) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =(10)
print(total)
-- EXECUTION TIME:
0.14912
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:08) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =(30)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:38) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =(30)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:31) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(30)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:44) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(30)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:15) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(100)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:41:33) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(100)
print(total)
-- EXECUTION TIME:
0.197307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:09) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(x*a)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:42:20) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(x*a)
print(total)
-- EXECUTION TIME:
0.128181
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:09) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(0,0 * 1,0)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:25) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(0,0 * 1,0)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:43) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(0,0 + 1,0)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:43) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int()
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:22) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(6)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:41) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(22)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:46:00) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(22)
print(total)
-- EXECUTION TIME:
0.203394
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:32) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(0,1)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:06) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(2-2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:47:15) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(2-2)
print(total)
-- EXECUTION TIME:
0.172996
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:26) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(1-1)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:47:37) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(1-1)
print(total)
-- EXECUTION TIME:
0.129335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:01) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(3,2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:57) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(r)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:15) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(1)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:49:24) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(1)
print(total)
-- EXECUTION TIME:
0.195817
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:07) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(8.8)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:50:17) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(8.8)
print(total)
-- EXECUTION TIME:
0.186217
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:34) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11.11)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:44) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11.11)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:50:54) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11.11)
print(total)
-- EXECUTION TIME:
0.174871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:04) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:22) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11)
print(total)
-- EXECUTION TIME:
0.183113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:47) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:56) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11)
print(total)
-- EXECUTION TIME:
0.183219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:10) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11*x)
print(total)
-- EXECUTION TIME:
0.162503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input("valor inicial Q0: "))
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:10) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11*x)
print(total)
-- EXECUTION TIME:
0.113396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:11) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11*x)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:27) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11*x)
print(total)
-- EXECUTION TIME:
0.188041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:45) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11+x)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:56) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+11+x)
print(total)
-- EXECUTION TIME:
0.183529
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:12) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+x)
print(total)
-- EXECUTION TIME:
0.13015
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:13) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+x)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:26) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(11+x)
print(total)
-- EXECUTION TIME:
0.147434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2934/main.py", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:32) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int()
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:14) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int(r+1)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:19:51) 
-- CODE:
from math import *

x =int(input("valor inicial Q0: "))
a =int(input("a taxa de redemento r: "))
total =int()
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x =int(input())
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
